# 2dim_sic_simulator

./: .fortls  .gitignore  README.md  plasma.in
src/: CMakeLists.txt  commons.f90  efield.f90  main.f90  mesh_jsonfile.f90  meshfile.f90  mod_vertex.f90  parameters.f90  poisson.f90  sic.f90  sic_types.f90  simplex_methods.f90  status.f90  tracer_methods.f90  vectors.f90  volume_integral.f90
src/cmake/: FindMKL.cmake
src/fft/: CMakeLists.txt  fft.f90  intel_fft.f90
src/field/: CMakeLists.txt  field.f90  scalar_field.f90  vector_field.f90
src/halfedge/: CMakeLists.txt  edgedict.f90  halfedge.f90  hfiter.f90
src/io/: CMakeLists.txt  csv.f90  progressbar.f90
src/utils/: CMakeLists.txt  argparse.f90  iter.f90  mymath.f90  myrandom.f90  str.f90
src/vectors/: CMakeLists.txt  vector2d.f90  vector3d.f90  vectors.f90
tools/: gridmesh.py  mesh.py  meshgen.py
